# toolchain

./: .clippy.toml  .editorconfig  .gitignore  .repo-quality.toml  .taplo.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  cargo-release.toml  datarose.toml  github-release.toml  hk.pkl  mise.toml  rust-cache.toml
.cargo/: config.toml
.codex/distributions/android-signing/: LICENSE  README.md  action.yml
.codex/distributions/cargo-release/: README.md  action.yml
.codex/distributions/github-release/: README.md  action.yml
.codex/distributions/repo-quality/: CONTRIBUTING.md  README.md  action.yml
.codex/distributions/repository/: CONTRIBUTING.md  README.md
.codex/distributions/rust-cache/: CONTRIBUTING.md  LICENSE  README.md  action.yml
.codex/distributions/tauri-release/: README.md  action.yml
.github/workflows/: _release-build-assets.yml  _release-datarose-tool.yml  _release-tool.yml  _release-toolchain.yml  delete-release.yml  release-all.yml  release-android-signing.yml  release-cargo-release.yml  release-github-release.yml  release-ios-signing.yml  release-repo-quality.yml  release-repository.yml  release-rust-cache.yml  release-tauri-release.yml  release-toolchain.yml  release-verzly.yml  release.yml  sync-distributions.yml  test.yml  update-floating-tags.yml
.verzly/distributions/android-signing/: CONTRIBUTING.md  README.md  action.yml
.verzly/distributions/cargo-release/: LICENSE  README.md  action.yml
.verzly/distributions/github-release/: LICENSE  README.md  action.yml
.verzly/distributions/ios-signing/: CONTRIBUTING.md  README.md  action.yml
.verzly/distributions/repository/: README.md  action.yml
.verzly/distributions/rust-cache/: README.md  action.yml
.verzly/distributions/tauri-release/: LICENSE  README.md  action.yml
.verzly/distributions/verzly/: README.md  action.yml
actions/_shared/: install-verzly.sh
actions/android-signing/: action.yml
actions/cargo-release/: action.yml
actions/github-release/: action.yml
actions/ios-signing/: action.yml
actions/repository/: action.yml
actions/rust-cache/: action.yml
actions/tauri-release/: action.yml
config/: rustfmt.toml
crates/android-signing/: Cargo.toml  README.md  cargo-release.toml  github-release.toml  source-github-release.toml
crates/android-signing/src/: android.rs  cli.rs  lib.rs  main.rs  secrets.rs
crates/android-signing/src/commands/: base64.rs  check_env.rs  doctor.rs  fingerprint.rs  generate.rs  mod.rs  print_secrets.rs  verify_fingerprint.rs  write_github_env.rs
crates/cargo-release/: Cargo.toml  README.md  cargo-release.toml  github-release.toml  source-github-release.toml
crates/cargo-release/src/: artifacts.rs  checksums.rs  cli.rs  config.rs  container.rs  lib.rs  main.rs  manifest.rs  process.rs
crates/cargo-release/src/commands/: build.rs  clean.rs  doctor.rs  init.rs  mod.rs  plan.rs
crates/github-release/: Cargo.toml  README.md  cargo-release.toml  github-release.toml  source-github-release.toml
crates/github-release/src/: cli.rs  config.rs  domain.rs  git.rs  github.rs  lib.rs  main.rs  output.rs  version_files.rs
crates/github-release/src/commands/: abort.rs  delete.rs  finalize.rs  floating_tags.rs  init.rs  mod.rs  plan.rs  prepare.rs  publish.rs
crates/ios-signing/: Cargo.toml
crates/ios-signing/src/: cli.rs  ios.rs  lib.rs  main.rs
crates/ios-signing/src/commands/: base64.rs  check_env.rs  doctor.rs  mod.rs  print_secrets.rs  write_github_env.rs
crates/repo-quality/: Cargo.toml  cargo-release.toml  github-release.toml
crates/repo-quality/src/: cli.rs  main.rs  project.rs  quality.rs  shell.rs  standards.rs  workflow.rs
crates/repo-quality/src/commands/: check.rs  doctor.rs  init.rs  mod.rs  plan.rs
crates/repository/: Cargo.toml  build.rs
crates/repository/src/: cli.rs  lib.rs  main.rs  output.rs  project.rs  quality.rs  release.rs  schema.rs  shell.rs  standards.rs  workflow.rs
crates/repository/src/commands/: check.rs  doctor.rs  init.rs  interactive.rs  mod.rs  plan.rs  projects.rs  release.rs  release_flow.rs  tui.rs
crates/repository/tests/: cli_contract.rs
crates/rust-cache/: Cargo.toml  README.md  cargo-release.toml  github-release.toml  rust-cache.toml  source-github-release.toml
crates/rust-cache/src/: cargo_config.rs  cli.rs  config.rs  env_plan.rs  generated.rs  gradle_cache.rs  lib.rs  main.rs  workspace.rs
crates/rust-cache/src/commands/: clean.rs  clean_generated.rs  doctor.rs  env.rs  init.rs  mod.rs  run.rs
crates/tauri-release/: Cargo.toml  README.md  cargo-release.toml  github-release.toml  source-github-release.toml  tauri-release.toml
crates/tauri-release/src/: artifacts.rs  checksums.rs  cli.rs  config.rs  container.rs  lib.rs  main.rs  manifest.rs  process.rs
crates/tauri-release/src/commands/: build.rs  clean.rs  doctor.rs  init.rs  mod.rs  plan.rs
crates/verzly/: Cargo.toml
crates/verzly-core/: Cargo.toml
crates/verzly-core/src/: artifact.rs  lib.rs  platform.rs  process.rs
crates/verzly/src/: main.rs
schemas/: datarose.toml.schema.json
scripts/: abort-source-release.sh  build-release-asset.sh  finalize-source-release.sh  prepare-source-release.sh  publish-distribution-repo.sh  release-distribution-repo.sh  sync-repo-template.sh
