[workspace]
resolver = "2"
members = [
    "crates/verzly",
    "crates/github-release",
    "crates/cargo-release",
    "crates/tauri-release",
    "crates/rust-cache",
    "crates/android-signing",
    "crates/ios-signing",
    "crates/repository",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/verzly/toolchain"
