[package]
name = "android-signing"
version = "0.1.0"
edition.workspace = true
description = "Android release signing keystore helper"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
base64 = "0.22"

[dependencies.verzly-core]
path = "../verzly-core"

[[bin]]
name = "android-signing"
path = "src/main.rs"
