[package]
name = "android-signing"
version = "0.1.0"
edition.workspace = true
description = "Android release signing keystore helper"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rpassword = "7.3"

[[bin]]
name = "android-signing"
path = "src/main.rs"
