[[bin]]
name = "android-signing"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
rand = "0.10"
rpassword = "7.5"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[package]
description = "Android release signing keystore helper"
name = "android-signing"
version = "0.3.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
