[package]
name = "cargo-release"
version = "0.1.0"
edition.workspace = true
description = "Container-aware release builder for Rust executable artifacts"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
glob = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
walkdir = "2.5"

[[bin]]
name = "cargo-release"
path = "src/main.rs"
