[[bin]]
name = "cargo-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
glob = "0.3"
hex = "0.4"
serde_json = "1.0"
sha2 = "0.11"
toml = "1.1"
walkdir = "2.5"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
description = "Container-aware release builder for Rust executable artifacts"
name = "cargo-release"
version = "0.1.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
