[package]
name = "github-release"
version.workspace = true
edition.workspace = true
description = "Reusable GitHub release branch and publishing orchestrator"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
glob = "0.3"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[[bin]]
name = "github-release"
path = "src/main.rs"
