[[bin]]
name = "github-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
glob = "0.3"
semver = "1.0"
serde_json = "1.0"
toml = "1.1"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
description = "Reusable GitHub release branch and publishing orchestrator"
name = "github-release"
version = "0.3.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
