[[bin]]
name = "repository"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[package]
description = "Repository standards manager for hk, mise, Rust, JavaScript, and PHP projects"
name = "repository"
version = "0.2.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
