[[bin]]
name = "repository"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
comfy-table = "7.2"
ratatui = "0.29"
serde_json = "1.0"
toml = "1.1"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.crossterm]
default-features = false
features = [
    "events",
    "windows",
]
version = "0.29"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[package]
description = "Repository standards manager for hk, mise, Rust, JavaScript, and PHP projects"
name = "repository"
version = "0.4.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
