[package]
name = "rust-cache"
version = "0.1.0"
edition.workspace = true
description = "Project-local cache routing helper for Rust and Tauri workspaces"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[[bin]]
name = "rust-cache"
path = "src/main.rs"
