[[bin]]
name = "rust-cache"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
toml = "1.1"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
description = "Project-local cache routing helper for Rust and Tauri workspaces"
name = "rust-cache"
version = "0.2.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
