[[bin]]
name = "tauri-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
glob = "0.3"
hex = "0.4"
serde_json = "1.0"
sha2 = "0.11"
toml = "1.1"
walkdir = "2.5"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
description = "Release builder for Tauri desktop and mobile artifacts"
name = "tauri-release"
version = "0.2.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true
