[package]
name = "verzly-core"
version.workspace = true
edition.workspace = true
description = "Shared process, platform, and artifact helpers for the Verzly toolchain"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
